fixed spacing

--- a/the-modern-jukebox-react-app/src/pages/queue/index.css
+++ b/the-modern-jukebox-react-app/src/pages/queue/index.css
@@ -39,7 +39,6 @@
 .itemContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     align-content: center;
     width: 90vw;
